{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 16,
  "lineage": "3e5bdf30-5ce5-6d3a-81af-8aba56d574ff",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Terraform_Security_Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:975050107758:security-group/sg-083bfed6ab5a9702b",
            "description": "Allow tls inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-083bfed6ab5a9702b",
            "ingress": [],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "975050107758",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow_tls"
            },
            "tags_all": {
              "Name": "Allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e745197c4c462b3c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:975050107758:security-group-rule/sgr-0d2472752edfc46e2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-0d2472752edfc46e2",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-083bfed6ab5a9702b",
            "security_group_rule_id": "sgr-0d2472752edfc46e2",
            "tags": null,
            "tags_all": {},
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Terraform_Security_Group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:975050107758:security-group-rule/sgr-0617221a4f3a021fd",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0617221a4f3a021fd",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-083bfed6ab5a9702b",
            "security_group_rule_id": "sgr-0617221a4f3a021fd",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Terraform_Security_Group"
          ]
        }
      ]
    }
  ]
}